@@ -17,6 +17,7 @@ LEGEND
   [*] Server side archive preferences support is not longer required for retrieving messages history from server
   [*] Added ability to switch between tabs by shortkeys Alt+Number
   [*} Added ability to clear chat window
+  [*] Added ability to optionaly display of status changes and entry/exit of users in conferences
   [-] When converting smileys into the text instead of the first key an arbitrary one was inserted
   [-] Contacts list window could be displayed outside the visible screen area
   [-] The roster window was closed by clicking on the tray even if it was inactive
